--- a/content/settings.json
+++ b/content/settings.json
@@ -1,25 +1,25 @@
 {
-  "store_id": 1579,
-  "name": "explicitasexshop",
   "domain": "explicitasexshop.netlify.app",
-  "short_name": "explicitasexshop",
-  "description": "explicitasexshop",
+  "currency_symbol": "R$",
   "primary_color": "#222831",
-  "secondary_color": "#393e46",
-  "bg_color": "#ffffff",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
-  "logo": "/img/uploads/logo.png",
-  "mini_logo": "",
-  "icon": "/img/icon.png",
-  "large_icon": "/img/large-icon.png",
-  "favicon": "/img/uploads/favicon.png",
+  "bg_color": "#ffffff",
+  "logo": "/img/uploads/logo-site-nova.png",
+  "name": "explicitasexshop",
+  "short_name": "explicitasexshop",
   "lang": "pt_br",
   "currency": "BRL",
-  "currency_symbol": "R$",
-  "country_code": "BR",
+  "mini_logo": "",
+  "font_family": "_",
+  "favicon": "/img/uploads/logo-pra-site-pequena-aba.png",
   "icons_font": "_",
-  "font_family": "_"
+  "country_code": "BR",
+  "secondary_color": "#393e46",
+  "icon": "/img/icon.png",
+  "store_id": 1579,
+  "description": "explicitasexshop",
+  "large_icon": "/img/large-icon.png"
 }
