--- a/content/settings.json
+++ b/content/settings.json
@@ -17,7 +17,7 @@
   "favicon": "/img/uploads/logo-pra-site-pequena-aba.png",
   "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "#393e46",
+  "secondary_color": "#cd1733",
   "icon": "/img/icon.png",
   "store_id": 1579,
   "description": "explicitasexshop",
