Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -18,8 +18,8 @@
   "icons_font": "_",
   "country_code": "BR",
   "secondary_color": "#cd1733",
-  "icon": "/img/icon.png",
+  "icon": "/img/uploads/logo-pra-site-pequena-aba.png",
   "store_id": 1579,
   "description": "explicitasexshop",
-  "large_icon": "/img/large-icon.png"
+  "large_icon": "/img/uploads/logo-pra-site-pequena-aba.png"
 }
