--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "domain": "explicitasexshop.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "#000000",
+  "primary_color": "#ce1a1a",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
@@ -17,7 +17,7 @@
   "favicon": "/img/uploads/logo-pra-site-pequena-aba.png",
   "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "#cd1733",
+  "secondary_color": "#323030",
   "icon": "/img/uploads/logo-pra-site-pequena-aba.png",
   "store_id": 1579,
   "description": "explicitasexshop",
