Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -20,6 +20,6 @@
   "secondary_color": "#323030",
   "icon": "/img/uploads/logo-pra-site-pequena-aba.png",
   "store_id": 1579,
-  "description": "explicitasexshop",
+  "description": "Os melhores produtos para apimentar o seu relacionamento você encontra aqui.\nPróteses, excitantes, estimulantes, vibradores.",
   "large_icon": "/img/uploads/logo-pra-site-pequena-aba.png"
 }
