--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,6 @@
 {
-  "domain": "explicitasexshop.netlify.app",
+  "domain": "explicitasexshop.com.br",
+  "repository": "ecomplus-stores/explicitasexshop",
   "currency_symbol": "R$",
   "primary_color": "#cd2424",
   "theme": {
